# dbt-instacart-elt-demo

./: .gitignore  Dockerfile  Dockerfile.scheduler  README.md  dbt_project.yml  docker-compose.yml  profiles.yml.template  pyproject.toml
.github/workflows/: ci.yml
cron/: dbt-crontab
models/: sources.yml
models/marts/: fct_customer_orders.sql  fct_department_sales.sql
models/staging/: stg_order_products.sql  stg_orders.sql  stg_products.sql
nginx/: nginx.conf
scripts/: health_check.sh  profiles.yml  run_dbt.sh
