[project]
name = "dbt-instacart-elt-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "ikrzm",email = "ikramzouaoui95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-snowflake (>=1.9.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
